--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     <script type="text/javascript" src="./js/jquery-1.9.1.js"></script>
     <script type="text/javascript" src="./js/jquery.mobile-1.3.2.js"></script> -->
     <link rel="stylesheet" href="./css/style.css"/>
-    <script type="text/javascript" src="./js/main.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -57,86 +56,10 @@
               
         </div>
 
-        <div style='height:750px; width: 100%; '>
-            <img src="assets/bvhd.png" style="padding: 5px 0 0 20px; width: 140px;height: 56px;">
-            <div style="display: flex;">
-                <div class="wrap">
-                    <img src="assets/ComChienTrung.png" alt="Snow" style="width:100%;margin-bottom: 5px;"/>  
-                    <label class="lbl">20K</label></label>
-                    <span style="margin: 15px; font-weight: 600;">Cơm chiên trứng</span>       
-                </div>
-
-                <div class="wrap">
-                    <img src="assets/ComChienDuongChau.png" alt="Snow" style="width:100%;margin-bottom: 5px;"/>  
-                    <label class="lbl">20K</label></label>
-                    <span style="margin: 15px; font-weight: 600;">Cơm chiên dương châu</span>       
-                </div>
-
-                <div class="wrap">
-                    <img src="assets/ComRangDuaBo.png" alt="Snow" style="width:100%;margin-bottom: 5px;"/>  
-                    <label class="lbl">30K</label></label>
-                    <span style="margin: 15px; font-weight: 600;">Cơm rang dưa bò</span>       
-                </div>
-
-                <div class="wrap">
-                    <img src="assets/MyXaoHaiSan.png" alt="Snow" style="width:100%;margin-bottom: 5px;"/>  
-                    <label class="lbl">30K</label></label>
-                    <span style="margin: 15px; font-weight: 600;">Mì xào hải sản</span>       
-                </div>
-            </div>
-
-            <div style="display: flex;">
-                <div class="wrap">
-                    <img src="assets/MiBoXao.png" alt="Snow" style="width:100%;margin-bottom: 5px;"/>  
-                    <label class="lbl">30K</label></label>
-                    <span style="margin: 15px; font-weight: 600;">Mì xào bò</span>       
-                </div>
-
-                <div class="wrap">
-                    <img src="assets/BanhBaoHap.png" alt="Snow" style="width:100%;margin-bottom: 5px;"/>  
-                    <label class="lbl">15K</label></label>
-                    <span style="margin: 15px; font-weight: 600;">Bánh bao hấp</span>       
-                </div>
-
-                <div class="wrap">
-                    <img src="assets/NuocSuoi.png" alt="Snow" style="width:100%;margin-bottom: 5px;"/>  
-                    <label class="lbl">10K</label></label>
-                    <span style="margin: 15px; font-weight: 600;">Nước suối</span>       
-                </div>
-
-                <div class="wrap">
-                    <img src="assets/CoCaCoLa.png" alt="Snow" style="width:100%;margin-bottom: 5px;"/>  
-                    <label class="lbl">15K</label></label>
-                    <span style="margin: 15px; font-weight: 600;">Coca Cola</span>       
-                </div>
-            </div>
-
-            <div style="display: flex;">
-                <div class="wrap">
-                    <img src="assets/Sting.png" alt="Snow" style="width:100%;margin-bottom: 5px;"/>  
-                    <label class="lbl">15K</label></label>
-                    <span style="margin: 15px; font-weight: 600;">Sting</span>       
-                </div>
-
-                <div class="wrap">
-                    <img src="assets/Pepsi.png" alt="Snow" style="width:100%;margin-bottom: 5px;"/>  
-                    <label class="lbl">15K</label></label>
-                    <span style="margin: 15px; font-weight: 600;">Pepsi</span>       
-                </div>
-
-                <div class="wrap">
-                    <img src="assets/BanhSnackBo.png" alt="Snow" style="width:100%;margin-bottom: 5px;"/>  
-                    <label class="lbl">10K</label></label>
-                    <span style="margin: 15px; font-weight: 600;">Bánh snack bò</span>       
-                </div>
-
-                <div class="wrap">
-                    <img src="assets/BanhSnackKhoaiTay.png" alt="Snow" style="width:100%;margin-bottom: 5px;"/>  
-                    <label class="lbl">10K</label></label>
-                    <span style="margin: 15px; font-weight: 600;">Bánh snack Khoai tây</span>       
-                </div>
-            </div>
+        <div style='height:750px; width: 100%;' id="idd1">
+            <img src="assets/bvhd.png" style="padding: 5px 0 0 20px; width: 140px;height: 56px;">          
         </div>
+
         <div style='height:790px; width: 38%; background-color: rgba(0, 0, 0, 0.04);'>
             <div style='height:710px;'>
                 <div style="display: flex; width: 100%; height: 75px;margin: 10px 0 0 20px;">
