--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- <link rel="stylesheet" href="./css/jquery.mobile-1.3.2.css"/>
-    <script type="text/javascript" src="./js/jquery-1.9.1.js"></script>
-    <script type="text/javascript" src="./js/jquery.mobile-1.3.2.js"></script> -->
     <link rel="stylesheet" href="./css/style.css"/>
     <title>Document</title>
 </head>
 <body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <!-- <div style="width: 100%; height: 120%; background-color: white; border: 1px solid red;">
         <img src="assets/Frame.jpg" style="width: 100px;height: 100px; padding: 20%;">
     </div> -->
