--- a/introduce.html
+++ b/introduce.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/introduce.css"/>
-    <title>Document</title>
+    <title>Introduce</title>
 </head>
 <body>
-    <div style="display: flex; margin: 30px 0 30px 40px;">
-        <img src="./assets/Introduce.png" style="width: 40px; height: 40px; "/>
-        <p style="font-size: 18px; font-weight: 600; margin: 12px 0 0 20px;">Giới thiệu</p>
+    <div class="div2">
+        <svg version="1.1" id="Capa_1" width="30" height="30" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	     viewBox="0 0 489.9 489.9" style="enable-background:new 0 0 489.9 489.9; margin: 25px 0 0 100px;" xml:space="preserve" fill="black">
+			<path d="M5,232.9c-3.2,3.2-5,7.6-5,12.1c0,4.6,1.8,8.9,5,12.1l137.7,137.7c6.7,6.7,17.6,6.7,24.3,0s6.7-17.6,0-24.3L58.5,262.2
+				h414.2c9.5,0,17.2-7.7,17.2-17.2s-7.7-17.1-17.2-17.1H58.5l108.4-108.5c6.7-6.7,6.7-17.6,0-24.3c-6.7-6.7-17.6-6.7-24.3,0
+				L5,232.9z"/>	
+        </svg>
+        <p style="font-size: 24px; font-weight: 600; margin: 26px 0 0 20px;">Giới thiệu</p>
     </div>
-    <div style='width: 850px; margin-left: 260px;text-align: justify;line-height:1.5'>
-        <img src="./assets/BVHD1.png" style="width: 800px; height: 273px;"/>
+    <div style='margin: 20px auto; width: 950px;text-align: justify;line-height:1.5'>
+        <img src="./assets/BVHD1.png" style="width: 900px; height: 308px;"/>
         <h2>Giới thiệu bệnh viện Hồng Đức III</h2>
         <p>Ra đời từ tháng 09 năm 2000 Bệnh Viện Đa Khoa Hồng Đức là nơi khám chữa bệnh uy tín và chăm sóc khách hàng đáng tin cậy.<br>
              Chúng tôi có mặt để đáp ứng nhu cầu sử dụng dịch vụ Y khoa chất lượng cao,
@@ -59,7 +64,7 @@
                 <span> là nơi khám chữa bệnh uy tín<br> và chăm sóc khách hàng đáng<br> tin cậy.</span>
             </div>
 
-            <div style="width:370px;margin: 10px 0 0 20px;">
+            <div style="width:370px;margin: 10px 0 0 40px;">
                 <span style="font-weight: 600;">CƠ SỞ 3 <br>BỆNH VIỆN ĐA KHOA HỒNG ĐỨC III<br></span> 
                 <span>
                     Add: 32/2 Thống Nhất, Phường 10, Gò Vấp, TP.HCM<br>
@@ -67,7 +72,7 @@
                     Email: info@hongduchospital.vn</span>
             </div>
 
-            <div style="width:200px;margin: 10px 0 0 20px;">
+            <div style="width:200px;margin: 10px 0 0 40px;">
                 <span style="font-weight: 600;">ĐƯỜNG DÂY NÓNG<br></span> 
                 <span>
                     CSKH: (028) 3996 9999<br>
