--- a/restaurant.html
+++ b/restaurant.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/listdoctor.css"/>
-    <title>List Doctor</title>
+    <link rel="stylesheet" href="./css/restaurant.css"/>
+    <title>Restaurant</title>
 </head>
 <body>
     <div class="div2">
@@ -15,16 +15,16 @@
 				h414.2c9.5,0,17.2-7.7,17.2-17.2s-7.7-17.1-17.2-17.1H58.5l108.4-108.5c6.7-6.7,6.7-17.6,0-24.3c-6.7-6.7-17.6-6.7-24.3,0
 				L5,232.9z"/>	
         </svg>
-        <p style="font-size: 24px; font-weight: 600; margin: 26px 0 0 20px;">Danh sách bác sĩ</p>
+        <p style="font-size: 24px; font-weight: 600; margin: 26px 0 0 20px;">Nhà hàng</p>
         <input type="text" id="myInput" style="background-image: url('assets/search.svg'); " placeholder="Tìm kiếm">
     </div>
-      
+
 
     <div style='width: 1400px;
-    margin: 20px auto;
+    margin: 50px auto;
     min-height: 200px;
     position: relative;' id="idd1">
     </div>
-    <script type="text/javascript" src="./js/listdoctor.js"></script>
+    <script type="text/javascript" src="./js/restaurant.js"></script>
 </body>
 </html>
