--- a/medicalschedule.html
+++ b/medicalschedule.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./css/medicalschedule.css"/>
     <title>Medical Schedule</title>
 </head>
@@ -21,7 +22,7 @@
 
 <div style="width: 1000px; margin: 10px auto;">
     <h1 style="text-align: center;">LỊCH KHÁM BỆNH</h1>
-    <h1 style="text-align: center; color: #FC393D;">Thứ 2, 13/09/2021 </h1>
+    <h1 style="text-align: center; color: #FC393D;" id="val"></h1>
     <table class="table" id="ttb">
         <thead>
             <tr>
