--- a/AppTV/index.html
+++ b/AppTV/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css"/>
     <title>Document</title>
-    <script type="text/javascript" src="./js/test.js"></script>
 </head>
    
 <body onload="getData()">
@@ -17,7 +16,7 @@
     <button onclick="insertOrderDetail()">Insert</button>
     <button onclick="DeleteOrderDetail()">Delete</button>
     <button onclick="UpdateOrderDetail()">Update</button> -->
-    <!-- <p id="ala"></p> -->
+    <p id="ala"></p>
     <div style="display: flex; background-color: #FFF" >
         <div style='height:790px; width: 130px; background-color: rgba(0, 0, 0, 0.04);'>
             <button class="insertBtn" style="margin-top: 100px;" onclick="myFunction1()">
@@ -134,10 +133,7 @@
         </div>
     </div>
  
-    <script>
-    GetListOrderDetailByID()
-    getData()
-    console.log('call get data');
-    </script>
+    <script type="text/javascript" src="./js/main.js"></script>
+    
 </body>
 </html>
