--- a/AppTV/medicalschedule.html
+++ b/AppTV/medicalschedule.html
@@ -49,6 +49,9 @@
 
     <script type="text/javascript" src="./js/medicalschedule.js"></script>
     <script type="text/javascript" src="./main.js"></script>
+    <script>
+        window.addEventListener("keydown", handleKeyCode);
+    </script>
 </body>
 
 </html>
