--- a/AppTV/orderapp.html
+++ b/AppTV/orderapp.html
@@ -155,7 +155,9 @@
     </div>
 
     <script type="text/javascript" src="./js/main.js"></script>
-
+    <script>
+        window.addEventListener("keydown", handleKeyCode);
+    </script>
 </body>
 
 </html>
