--- a/AppTV/watchfilm.html
+++ b/AppTV/watchfilm.html
@@ -63,5 +63,8 @@
 
     <script type="text/javascript" src="./js/watchfilm.js"></script>
     <script type="text/javascript" src="./main.js"></script>
+    <script>
+      window.addEventListener("keydown", handleKeyCode);
+    </script>
   </body>
 </html>
