--- a/AppTV/listdoctor.html
+++ b/AppTV/listdoctor.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <link rel="stylesheet" href="./css/listdoctor.css"/>
     <link rel="stylesheet" href="./css/common.css"/>
     <title>List Doctor</title>
 </head>
 <body>
+    <script src="./js/jquery-1.9.1.js"></script>
     <div class="content">
         <div class="div2">
             <svg onclick="goBack()" class="pointer" version="1.1" id="Capa_1" width="30" height="30" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -31,5 +31,8 @@
     </div>
     <script type="text/javascript" src="./js/listdoctor.js"></script>
     <script type="text/javascript" src="./main.js"></script>
+    <script>
+        window.addEventListener("keydown", handleKeyCode);
+      </script>
 </body>
 </html>
