--- a/AppTV/restaurant.html
+++ b/AppTV/restaurant.html
@@ -26,11 +26,7 @@
             <input type="text" id="myInput" style="background-image: url('assets/search.svg'); " placeholder="Tìm kiếm">
         </div>
 
-
-        <div style='width: 1400px;
-        margin: 50px auto;
-        min-height: 200px;
-        position: relative;' id="idd1">
+        <div class="restaurant-list" id="restaurant-list">
         </div>
     </div>
     <script type="text/javascript" src="./js/restaurant.js"></script>
