--- a/AppTV/rules.html
+++ b/AppTV/rules.html
@@ -63,7 +63,8 @@
                 <div style="width:230px;">
                     <img class="logo-hospital" src="assets/bvhd.png">
                     <span class="fw600"><br>Bệnh Viện Đa Khoa Hồng Đức<br></span>
-                    <span class="black-text"> là nơi khám chữa bệnh uy tín<br> và chăm sóc khách hàng đáng<br> tin cậy.</span>
+                    <span class="black-text"> là nơi khám chữa bệnh uy tín<br> và chăm sóc khách hàng đáng<br> tin
+                        cậy.</span>
                 </div>
 
                 <div class="footer-info">
