--- a/AppTV/listdoctor.html
+++ b/AppTV/listdoctor.html
@@ -26,7 +26,7 @@
         <div style='width: 1400px;
         margin: 20px auto;
         min-height: 200px;
-        position: relative;' id="idd1">
+        position: relative;' id="doctor-list">
         </div>
     </div>
     <script type="text/javascript" src="./js/listdoctor.js"></script>
