--- a/AppTV/rules.html
+++ b/AppTV/rules.html
@@ -25,7 +25,7 @@
             <p style="font-size: 24px; font-weight: 600; margin: 26px 0 0 20px;">Nội quy</p>
         </div>
         <div class="black-text content-text">
-            <img src="./assets/NoiQuy.png" style="width: 900px; height: 308px;" />
+            <img src="./assets/NoiQuy.png" style="width: auto; height: 308px;" />
             <h2>Bệnh viện đề nghị quý vị vui lòng tuân thủ các quy định sau:</h2>
             <p class="black-text" style="border-bottom: 1px solid black; padding-bottom:25px">
                 Khi đến khám bệnh nếu có thẻ BHYT phải xuất trình ngay thẻ, giấy tờ tùy thân có ảnh (trường hợp cấp cứu
